--- a/ramlsharp.parser.test/packages.config
+++ b/ramlsharp.parser.test/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="FParsec" version="1.0.1" targetFramework="net45" />
   <package id="FsUnit" version="1.3.0.1" targetFramework="net45" />
+  <package id="FsYaml" version="1.1.3.0" targetFramework="net45" />
   <package id="NUnit" version="2.6.3" targetFramework="net45" />
 </packages>
