--- a/ramlsharp.parser.test/ramlsharp.parser.test.fsproj
+++ b/ramlsharp.parser.test/ramlsharp.parser.test.fsproj
@@ -45,6 +45,10 @@
       <HintPath>..\packages\FsUnit.1.3.0.1\Lib\Net40\FsUnit.NUnit.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="FsYaml">
+      <HintPath>..\packages\FsYaml.1.1.3.0\lib\net40\FsYaml.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <Private>True</Private>
